parser/parser_tests/tests_input/unit/bad/Bad15.ty
mutable class Student { 
    
    values: {
        age: Int = 3,
        firstName,
        lastName: String,
    }
}
